tests/should_fail/let_destructure_cons_on_int.nv
module test
// let destructure: list cons on Int (not a list)
let [h, ..t] = 42
